<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".activities.NoteActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/textNoteInfo"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCourse"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourse"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textNoteTitl" android:hint="Note Text"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/spinnerCourse" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/textNoteTitl"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCourse"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourse"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/spinnerCourse"
            android:hint="Note Title"/>
</android.support.constraint.ConstraintLayout>