<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/ic_menu_camera"
                android:title="Notes"/>
        <item
                android:id="@+id/nav_courses"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Courses"/>
        <item
                android:id="@+id/nav_recent"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Recent Courses"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
        </menu>
    </item>

</menu>
